Update with "Under Construction sign"

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Sachh Moka</title>
+        <title>Under Construction</title>
     </head>
 
     <body>
-
-        s</body>
+        <p>This portfolio site is under construction, please come back later!</p>
+    </body>
 </html>
