--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title></title>
+    
+    <title>sachh moka</title>
 </head>
+
 <body>
 
-    <div id="heading">
-        <h1>Sachh Moka</h1>
-        <h2>IT Student at JCU, Junior Swift Developer at MAF International, ACS EPC Tech Research Lead</h2>
+    <div id="nav">
+        <p>---------------------</p>
+        <a href="https://linkedin.com/in/sachh-moka" class="linkedin" title="LinkedIn" target=”_blank”>/linkedin</a>
+        <a href="https://github.com/sachhm" class="github" title="GitHub" target=”_blank”>/github</a>
+        <p>---------------------</p>
     </div>
 
-    <div id="content">
-        <div id="nav">
-            <a href="https://linkedin.com/in/sachh-moka" class="linkedin" title="LinkedIn" target=”_blank”>LinkedIn</a>
-            <a href="https://github.com/sachhm" class="github" title="GitHub" target=”_blank”>GitHub</a>
-        </div>
+    <div id="heading">
+        <h1>sachh moka</h1>
+        <p>it student at <a href="https://www.jcu.edu.au/" target="_blank">james cook university</a></p>
+        <p>jr. dev at <a href="https://www.mafint.org/" target="_blank">maf international</a></p>
+        <p>epc tech research lead at <a href="https://www.acs.org.au/" target="_blank">australian computer society (acs)</a></p>        
+    </div>
+
+    <div id="about"> 
+        <h2>about me</h2>
+        <p>I am a second year Information Technology student at James Cook University in Cairns, Australia. I work part time as a Junior Swift Developer at Mision Aviation Fellowship International, where I work on an internal Electronic Flight Bag (EFB) app used by MAF pilots. </p>
+
+
+        <p>Please reach out to me on LinkedIn if you're interested in connecting with me!</p>
     </div>
 
     <div id="footer">
