--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="heading">
         <h1>sachh moka</h1>
-        <p>it student at <a href="https://www.jcu.edu.au/" target="_blank">james cook university</a></p>
+        <p>information technology student at <a href="https://www.jcu.edu.au/" target="_blank">james cook university</a></p>
         <p>jr. dev at <a href="https://www.mafint.org/" target="_blank">maf international</a></p>
         <p>epc tech research lead at <a href="https://www.acs.org.au/" target="_blank">australian computer society (acs)</a></p>        
     </div>
