--- a/index.html
+++ b/index.html
@@ -19,36 +19,36 @@
 
     <div id="content">
         <div id="heading">
-            <h2> <div id= "fname"> sachh </div> <div id= "lname">moka </div> </h2>
+            <h2> <div id= "first"> sachh </div> <div id= "last">moka </div> </h2>
             <p>information technology student at <a href="https://www.jcu.edu.au/" target="_blank">james cook university</a></p>
             <p>jr. dev at <a href="https://www.mafint.org/" target="_blank">maf international</a></p>
             <p>epc tech research lead at <a href="https://www.acs.org.au/" target="_blank">australian computer society (acs)</a></p>        
         </div>
     
         <div id="about"> 
-            <h2>about me</h2>
+            <h2><div id= "first">about</div> <div id="last">me</div></h2>
             <p>I am a second year Information Technology student at James Cook University in Cairns, Australia. I work part time as a Junior Swift Developer at Mision Aviation Fellowship International, where I work on an internal Electronic Flight Bag (EFB) app used by MAF pilots. </p>
             
             <p>Please reach out to me on LinkedIn if you're interested in connecting with me!</p>
         </div>
 
         <div id="projects">
-            <h2>projects (on GitHub)</h2>
+            <h2><div id="first">my</div> <div id="last">projects</div></h2>
             <ul class="styled-list">
-                <li><a href="https://github.com/sachhm/stoicity" target="_blank">stoicity (Python, HTML, CSS, Flask)</a></li>
-                    <p>a simple web app that displays Stoic quotes.</p>
-                <li><a href="https://github.com/sachhm/pilot-logger" target="_blank">pilot-logger (Swift, SwiftUI)</a></li>
-                    <p>a simple app to track weather using the Open-Meteo API.</p>
-                <li><a href="https://github.com/sachhm/weather-app" target="_blank">weather-app (Python, HTML, CSS, Open-Meteo API)</a></li>
-                    <p>a simple iOS flight log app.</p>
-                <li><a href="https://github.com/sachhm/qld-rfs-locator" target="_blank">qld-rfs-locator (Python, HTML, CSS)</a></li>
-                    <p>a simple app to find the nearest QLD Rural Fire Station.</p>
+                <li><a href="https://github.com/sachhm/stoicity" target="_blank">stoicity (Python, HTML, CSS, Flask)</a>
+                    <p>a simple web app that displays Stoic quotes.</p></li>
+                <li><a href="https://github.com/sachhm/pilot-logger" target="_blank">pilot-logger (Swift, SwiftUI)</a>
+                    <p>a simple app to track weather using the Open-Meteo API.</p></li>
+                <li><a href="https://github.com/sachhm/weather-app" target="_blank">weather-app (Python, HTML, CSS, Open-Meteo API)</a>
+                    <p>a simple iOS flight log app.</p></li>
+                <li><a href="https://github.com/sachhm/qld-rfs-locator" target="_blank">qld-rfs-locator (Python, HTML, CSS)</a>
+                    <p>a simple app to find the nearest QLD Rural Fire Station.</p></li>
             </ul>
         </div>
     </div>
 
     <div id="footer">
-        <p>© 2024 Sachh Moka. All rights reserved.</p>
+        <p>© 2024 Sachh Moka. Built with raw HTML and CSS by yours truly :) </p>
     </div>
 </body>
 </html>
