Updated content, modified css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
         <div id="about"> 
             <h2><div id= "first">about</div> <div id="last">me</div></h2>
-            <p>I am a second year Information Technology student at James Cook University in Cairns, Australia. I work part time as a Junior Swift Developer at Mission Aviation Fellowship International, where I work on an internal Electronic Flight Bag (EFB) app used by MAF pilots. </p>
+            <p>I am a final year Information Technology student at James Cook University in Cairns, Australia. I work part time as a Junior Swift Developer at Mission Aviation Fellowship International, where I work on an internal Electronic Flight Bag (EFB) iOS app used by MAF pilots. </p>
             
             <p>Please reach out to me on LinkedIn if you're interested in connecting with me!</p>
         </div>
